[gd_scene load_steps=16 format=2]

[ext_resource path="res://RoadSegment.tscn" type="PackedScene" id=1]
[ext_resource path="res://Car.tscn" type="PackedScene" id=2]
[ext_resource path="res://ReconBot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://mailTruck/openMailTruck.obj" type="ArrayMesh" id=8]
[ext_resource path="res://mailTruck/openMailTruck.tres" type="Material" id=9]
[ext_resource path="res://packages/package-8.obj" type="ArrayMesh" id=10]
[ext_resource path="res://packages/package-8.tres" type="Material" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.71854, 0.688841, 1.94077 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1.5, 0, -1, -1.5, 0.7, 0.2, -1.5, 0, 1.1, -1.5, 0, -1, -1.5, 0.7, -0.1, -1.5, 0.7, 0.2, -1.5, 0.7, 0.2, -1.5, 1.7, 1.1, -1.5, 0, 1.1, -1.5, 0.7, -0.1, -1.5, 1.7, 0.2, -1.5, 0.7, 0.2, -1.5, 0.7, 0.2, -1.5, 1.7, 0.2, -1.5, 1.7, 1.1, -1.5, 0, -1, -1.5, 1.7, -0.1, -1.5, 0.7, -0.1, -1.5, 0.7, -0.1, -1.5, 1.7, -0.1, -1.5, 1.7, 0.2, -1.5, 0, -1, -1.5, 1.7, -1, -1.5, 1.7, -0.1, 1.8, 0, -1, 1.8, 0, 1.1, 1.8, 0.8, 0.2, 1.8, 0, -1, 1.8, 0.8, 0.2, 1.8, 0.8, -0.1, 1.8, 0.8, 0.2, 1.8, 0, 1.1, 1.8, 1.7, 1.1, 1.8, 0.8, -0.1, 1.8, 0.8, 0.2, 1.8, 1.7, 0.2, 1.8, 0.8, 0.2, 1.8, 1.7, 1.1, 1.8, 1.7, 0.2, 1.8, 0, -1, 1.8, 0.8, -0.1, 1.8, 1.7, -0.1, 1.8, 0.8, -0.1, 1.8, 1.7, 0.2, 1.8, 1.7, -0.1, 1.8, 0, -1, 1.8, 1.7, -0.1, 1.8, 1.7, -1, -1.5, 1.7, 1.1, -1.2, 0.3, 1.1, -1.5, 0, 1.1, -1.5, 1.7, 1.1, -1.2, 0.9, 1.1, -1.2, 0.3, 1.1, -1.2, 0.9, 1.1, -1.1, 0.5, 1.1, -1.2, 0.3, 1.1, -1.2, 0.9, 1.1, -1.1, 0.6, 1.1, -1.1, 0.5, 1.1, -1.2, 0.9, 1.1, -1.1, 0.7, 1.1, -1.1, 0.6, 1.1, -1.2, 0.9, 1.1, -1.1, 0.8, 1.1, -1.1, 0.7, 1.1, -1.5, 1.7, 1.1, -1, 1.1, 1.1, -1.2, 0.9, 1.1, -1.5, 1.7, 1.1, -1, 1.7, 1.1, -1, 1.1, 1.1, -1, 1.1, 1.1, -0.7, 1.1, 1.1, -1.2, 0.9, 1.1, -1, 1.7, 1.1, -0.7, 1.1, 1.1, -1, 1.1, 1.1, -1, 1.7, 1.1, -0.7, 1.7, 1.1, -0.7, 1.1, 1.1, -1.1, 0.5, 1.1, -0.6, 0.5, 1.1, -1.2, 0.3, 1.1, -1.1, 0.6, 1.1, -0.6, 0.5, 1.1, -1.1, 0.5, 1.1, -1.1, 0.7, 1.1, -0.6, 0.6, 1.1, -1.1, 0.6, 1.1, -1.1, 0.6, 1.1, -0.6, 0.6, 1.1, -0.6, 0.5, 1.1, -1.1, 0.8, 1.1, -0.4, 0.7, 1.1, -1.1, 0.7, 1.1, -1.1, 0.7, 1.1, -0.4, 0.7, 1.1, -0.6, 0.6, 1.1, -0.6, 0.6, 1.1, -0.4, 0.7, 1.1, -0.6, 0.5, 1.1, -1.2, 0.9, 1.1, -0.4, 0.8, 1.1, -1.1, 0.8, 1.1, -1.1, 0.8, 1.1, -0.4, 0.8, 1.1, -0.4, 0.7, 1.1, -0.4, 0.7, 1.1, -0.2, 0.4, 1.1, -0.6, 0.5, 1.1, -0.6, 0.5, 1.1, -0.2, 0.4, 1.1, -1.2, 0.3, 1.1, -0.4, 0.8, 1.1, -0.2, 0.4, 1.1, -0.4, 0.7, 1.1, -0.4, 0.8, 1.1, -0.2, 0.6, 1.1, -0.2, 0.4, 1.1, -0.2, 0.4, 1.1, 0, 0.4, 1.1, -1.2, 0.3, 1.1, -0.2, 0.6, 1.1, 0, 0.4, 1.1, -0.2, 0.4, 1.1, -0.4, 0.8, 1.1, 0, 0.6, 1.1, -0.2, 0.6, 1.1, -0.2, 0.6, 1.1, 0, 0.6, 1.1, 0, 0.4, 1.1, -1.2, 0.3, 1.1, 0.1, 0.3, 1.1, -1.5, 0, 1.1, 0, 0.4, 1.1, 0.1, 0.3, 1.1, -1.2, 0.3, 1.1, 0, 0.6, 1.1, 0.1, 0.3, 1.1, 0, 0.4, 1.1, -0.4, 0.8, 1.1, 0.1, 0.9, 1.1, 0, 0.6, 1.1, 0, 0.6, 1.1, 0.1, 0.9, 1.1, 0.1, 0.3, 1.1, -1.2, 0.9, 1.1, 0.1, 0.9, 1.1, -0.4, 0.8, 1.1, -0.7, 1.1, 1.1, 0.1, 0.9, 1.1, -1.2, 0.9, 1.1, -0.7, 1.7, 1.1, 0.1, 0.9, 1.1, -0.7, 1.1, 1.1, 0.1, 0.3, 1.1, 0.4, 0.1, 1.1, -1.5, 0, 1.1, 0.1, 0.9, 1.1, 0.4, 0.1, 1.1, 0.1, 0.3, 1.1, -0.7, 1.7, 1.1, 0.4, 1, 1.1, 0.1, 0.9, 1.1, 0.1, 0.9, 1.1, 0.4, 1, 1.1, 0.4, 0.1, 1.1, 0.4, 1, 1.1, 0.5, 0.2, 1.1, 0.4, 0.1, 1.1, 0.4, 1, 1.1, 0.5, 0.9, 1.1, 0.5, 0.2, 1.1, 0.5, 0.9, 1.1, 0.6, 0.3, 1.1, 0.5, 0.2, 1.1, 0.5, 0.9, 1.1, 0.6, 0.4, 1.1, 0.6, 0.3, 1.1, 0.5, 0.9, 1.1, 0.6, 0.5, 1.1, 0.6, 0.4, 1.1, 0.5, 0.9, 1.1, 0.6, 0.6, 1.1, 0.6, 0.5, 1.1, 0.5, 0.9, 1.1, 0.6, 0.7, 1.1, 0.6, 0.6, 1.1, 0.5, 0.9, 1.1, 0.6, 0.8, 1.1, 0.6, 0.7, 1.1, -0.7, 1.7, 1.1, 1.1, 1.1, 1.1, 0.4, 1, 1.1, -0.7, 1.7, 1.1, 1.1, 1.7, 1.1, 1.1, 1.1, 1.1, 0.6, 0.3, 1.1, 1.4, 0.3, 1.1, 0.5, 0.2, 1.1, 0.6, 0.4, 1.1, 1.4, 0.3, 1.1, 0.6, 0.3, 1.1, 0.6, 0.5, 1.1, 1.4, 0.4, 1.1, 0.6, 0.4, 1.1, 0.6, 0.4, 1.1, 1.4, 0.4, 1.1, 1.4, 0.3, 1.1, 0.6, 0.6, 1.1, 1.4, 0.5, 1.1, 0.6, 0.5, 1.1, 0.6, 0.5, 1.1, 1.4, 0.5, 1.1, 1.4, 0.4, 1.1, 0.6, 0.7, 1.1, 1.4, 0.6, 1.1, 0.6, 0.6, 1.1, 0.6, 0.6, 1.1, 1.4, 0.6, 1.1, 1.4, 0.5, 1.1, 0.6, 0.8, 1.1, 1.4, 0.7, 1.1, 0.6, 0.7, 1.1, 0.6, 0.7, 1.1, 1.4, 0.7, 1.1, 1.4, 0.6, 1.1, 0.5, 0.9, 1.1, 1.4, 0.8, 1.1, 0.6, 0.8, 1.1, 0.6, 0.8, 1.1, 1.4, 0.8, 1.1, 1.4, 0.7, 1.1, 1.1, 1.7, 1.1, 1.4, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.4, 1.1, 1.1, 0.4, 1, 1.1, 1.1, 1.7, 1.1, 1.4, 1.7, 1.1, 1.4, 1.1, 1.1, 1.4, 0.7, 1.1, 1.5, 0.2, 1.1, 1.4, 0.6, 1.1, 0.5, 0.2, 1.1, 1.5, 0.2, 1.1, 0.4, 0.1, 1.1, 1.4, 0.3, 1.1, 1.5, 0.2, 1.1, 0.5, 0.2, 1.1, 1.4, 0.4, 1.1, 1.5, 0.2, 1.1, 1.4, 0.3, 1.1, 1.4, 0.8, 1.1, 1.5, 0.2, 1.1, 1.4, 0.7, 1.1, 1.4, 0.6, 1.1, 1.5, 0.2, 1.1, 1.4, 0.5, 1.1, 1.4, 0.5, 1.1, 1.5, 0.2, 1.1, 1.4, 0.4, 1.1, 0.4, 1, 1.1, 1.5, 0.9, 1.1, 0.5, 0.9, 1.1, 1.4, 0.8, 1.1, 1.5, 0.9, 1.1, 1.5, 0.2, 1.1, 0.5, 0.9, 1.1, 1.5, 0.9, 1.1, 1.4, 0.8, 1.1, 0.4, 0.1, 1.1, 1.6, 0.1, 1.1, -1.5, 0, 1.1, 1.5, 0.2, 1.1, 1.6, 0.1, 1.1, 0.4, 0.1, 1.1, 1.5, 0.9, 1.1, 1.6, 0.1, 1.1, 1.5, 0.2, 1.1, 0.4, 1, 1.1, 1.6, 1, 1.1, 1.5, 0.9, 1.1, 1.5, 0.9, 1.1, 1.6, 1, 1.1, 1.6, 0.1, 1.1, 1.4, 1.7, 1.1, 1.6, 1, 1.1, 1.4, 1.1, 1.1, 1.4, 1.1, 1.1, 1.6, 1, 1.1, 0.4, 1, 1.1, 1.6, 0.1, 1.1, 1.8, 0, 1.1, -1.5, 0, 1.1, 1.6, 1, 1.1, 1.8, 0, 1.1, 1.6, 0.1, 1.1, 1.4, 1.7, 1.1, 1.8, 1.7, 1.1, 1.6, 1, 1.1, 1.6, 1, 1.1, 1.8, 1.7, 1.1, 1.8, 0, 1.1, -1.5, 1.7, -1, -1.5, 0, -1, -1.2, 0.2, -1, -1.5, 1.7, -1, -1.2, 0.2, -1, -1.2, 0.7, -1, -1.2, 0.7, -1, -1.2, 0.2, -1, -1.1, 0.3, -1, -1.2, 0.7, -1, -1.1, 0.3, -1, -1.1, 0.6, -1, -1.5, 1.7, -1, -1.2, 0.7, -1, -1, 1.1, -1, -1.5, 1.7, -1, -1, 1.1, -1, -1, 1.7, -1, -1.1, 0.3, -1, -1.2, 0.2, -1, -0.9, 0.3, -1, -1.1, 0.6, -1, -1.1, 0.3, -1, -0.9, 0.3, -1, -1.2, 0.7, -1, -1.1, 0.6, -1, -0.9, 0.6, -1, -1.1, 0.6, -1, -0.9, 0.3, -1, -0.9, 0.6, -1, -0.9, 0.6, -1, -0.9, 0.3, -1, -0.8, 0.5, -1, -1.2, 0.7, -1, -0.9, 0.6, -1, -0.8, 0.6, -1, -0.9, 0.6, -1, -0.8, 0.5, -1, -0.8, 0.6, -1, -1, 1.7, -1, -1, 1.1, -1, -0.7, 1.1, -1, -1, 1.1, -1, -1.2, 0.7, -1, -0.7, 1.1, -1, -1, 1.7, -1, -0.7, 1.1, -1, -0.7, 1.7, -1, -0.9, 0.3, -1, -1.2, 0.2, -1, -0.6, 0.3, -1, -0.8, 0.5, -1, -0.9, 0.3, -1, -0.6, 0.3, -1, -0.8, 0.5, -1, -0.6, 0.3, -1, -0.6, 0.4, -1, -1.2, 0.7, -1, -0.8, 0.6, -1, -0.3, 0.6, -1, -0.8, 0.6, -1, -0.8, 0.5, -1, -0.3, 0.6, -1, -0.7, 1.7, -1, -0.7, 1.1, -1, -0.3, 0.7, -1, -1.2, 0.7, -1, -0.3, 0.6, -1, -0.3, 0.7, -1, -0.7, 1.1, -1, -1.2, 0.7, -1, -0.3, 0.7, -1, -0.7, 1.7, -1, -0.3, 0.7, -1, -0.3, 0.8, -1, -0.3, 0.7, -1, -0.3, 0.6, -1, -0.2, 0.7, -1, -0.3, 0.8, -1, -0.3, 0.7, -1, -0.2, 0.7, -1, -0.7, 1.7, -1, -0.3, 0.8, -1, -0.2, 0.8, -1, -0.3, 0.8, -1, -0.2, 0.7, -1, -0.2, 0.8, -1, -0.7, 1.7, -1, -0.2, 0.8, -1, -0.2, 1.1, -1, -0.2, 0.8, -1, -0.2, 0.7, -1, -0.1, 1.1, -1, -0.7, 1.7, -1, -0.2, 1.1, -1, -0.1, 1.1, -1, -0.2, 1.1, -1, -0.2, 0.8, -1, -0.1, 1.1, -1, -0.7, 1.7, -1, -0.1, 1.1, -1, -0.1, 1.3, -1, -0.6, 0.4, -1, -0.6, 0.3, -1, 0, 0.3, -1, -0.6, 0.3, -1, -1.2, 0.2, -1, 0, 0.3, -1, -0.8, 0.5, -1, -0.6, 0.4, -1, 0, 0.4, -1, -0.6, 0.4, -1, 0, 0.3, -1, 0, 0.4, -1, -0.3, 0.6, -1, -0.8, 0.5, -1, 0, 0.5, -1, -0.8, 0.5, -1, 0, 0.4, -1, 0, 0.5, -1, -0.2, 0.7, -1, -0.3, 0.6, -1, 0, 0.6, -1, -0.3, 0.6, -1, 0, 0.5, -1, 0, 0.6, -1, -0.1, 1.1, -1, -0.2, 0.7, -1, 0, 0.7, -1, -0.2, 0.7, -1, 0, 0.6, -1, 0, 0.7, -1, -0.1, 1.1, -1, 0, 0.7, -1, 0, 1, -1, -0.1, 1.3, -1, -0.1, 1.1, -1, 0, 1.1, -1, -0.1, 1.1, -1, 0, 1, -1, 0, 1.1, -1, -0.1, 1.3, -1, 0, 1.1, -1, 0, 1.2, -1, -1.2, 0.2, -1, -1.5, 0, -1, 0.1, 0.2, -1, 0, 0.3, -1, -1.2, 0.2, -1, 0.1, 0.2, -1, 0, 0.4, -1, 0, 0.3, -1, 0.1, 0.2, -1, 0, 0.5, -1, 0, 0.4, -1, 0.1, 0.2, -1, 0, 0.7, -1, 0, 0.6, -1, 0.1, 0.2, -1, 0, 0.6, -1, 0, 0.5, -1, 0.1, 0.2, -1, 0, 1, -1, 0, 0.7, -1, 0.1, 0.7, -1, 0, 0.7, -1, 0.1, 0.2, -1, 0.1, 0.7, -1, 0, 1.2, -1, 0, 1.1, -1, 0.1, 1, -1, 0, 1, -1, 0.1, 0.7, -1, 0.1, 1, -1, 0, 1.1, -1, 0, 1, -1, 0.1, 1, -1, -0.1, 1.3, -1, 0, 1.2, -1, 0.1, 1.2, -1, 0, 1.2, -1, 0.1, 1, -1, 0.1, 1.2, -1, -0.7, 1.7, -1, -0.1, 1.3, -1, 0.1, 1.3, -1, -0.1, 1.3, -1, 0.1, 1.2, -1, 0.1, 1.3, -1, 0.1, 1, -1, 0.1, 0.7, -1, 0.2, 0.2, -1, 0.1, 0.7, -1, 0.1, 0.2, -1, 0.2, 0.2, -1, 0.1, 0.2, -1, -1.5, 0, -1, 0.2, 0.2, -1, 0.1, 1.2, -1, 0.1, 1, -1, 0.2, 1, -1, 0.1, 1, -1, 0.2, 0.2, -1, 0.2, 1, -1, 0.1, 1.3, -1, 0.1, 1.2, -1, 0.2, 1.2, -1, 0.1, 1.2, -1, 0.2, 1, -1, 0.2, 1.2, -1, -0.7, 1.7, -1, 0.1, 1.3, -1, 0.2, 1.4, -1, 0.1, 1.3, -1, 0.2, 1.2, -1, 0.2, 1.4, -1, 0.2, 1.2, -1, 0.2, 1, -1, 0.3, 0.3, -1, 0.2, 1, -1, 0.2, 0.2, -1, 0.3, 0.3, -1, 0.2, 1.4, -1, 0.2, 1.2, -1, 0.3, 0.3, -1, 0.2, 1.4, -1, 0.3, 0.3, -1, 0.3, 1.3, -1, 0.3, 1.3, -1, 0.3, 0.3, -1, 0.4, 0.4, -1, 0.3, 1.3, -1, 0.4, 0.4, -1, 0.4, 0.8, -1, 0.3, 1.3, -1, 0.4, 0.8, -1, 0.4, 0.9, -1, 0.3, 1.3, -1, 0.4, 0.9, -1, 0.4, 1, -1, 0.3, 1.3, -1, 0.4, 1, -1, 0.4, 1.1, -1, 0.3, 1.3, -1, 0.4, 1.1, -1, 0.4, 1.2, -1, 0.4, 0.4, -1, 0.3, 0.3, -1, 0.7, 0.4, -1, 0.4, 0.8, -1, 0.4, 0.4, -1, 0.7, 0.4, -1, 0.4, 0.9, -1, 0.4, 0.8, -1, 0.7, 0.8, -1, 0.4, 0.8, -1, 0.7, 0.4, -1, 0.7, 0.8, -1, 0.4, 1, -1, 0.4, 0.9, -1, 0.7, 0.9, -1, 0.4, 0.9, -1, 0.7, 0.8, -1, 0.7, 0.9, -1, 0.4, 1.1, -1, 0.4, 1, -1, 0.7, 1, -1, 0.4, 1, -1, 0.7, 0.9, -1, 0.7, 1, -1, 0.4, 1.2, -1, 0.4, 1.1, -1, 0.7, 1.1, -1, 0.4, 1.1, -1, 0.7, 1, -1, 0.7, 1.1, -1, 0.3, 1.3, -1, 0.4, 1.2, -1, 0.7, 1.2, -1, 0.4, 1.2, -1, 0.7, 1.1, -1, 0.7, 1.2, -1, 0.3, 0.3, -1, 0.2, 0.2, -1, 0.8, 0.3, -1, 0.7, 1.1, -1, 0.7, 1, -1, 0.8, 0.3, -1, 0.7, 1.2, -1, 0.7, 1.1, -1, 0.8, 0.3, -1, 0.7, 0.9, -1, 0.7, 0.8, -1, 0.8, 0.3, -1, 0.7, 0.8, -1, 0.7, 0.4, -1, 0.8, 0.3, -1, 0.7, 0.4, -1, 0.3, 0.3, -1, 0.8, 0.3, -1, 0.7, 1, -1, 0.7, 0.9, -1, 0.8, 0.3, -1, 0.3, 1.3, -1, 0.7, 1.2, -1, 0.8, 1.3, -1, 0.7, 1.2, -1, 0.8, 0.3, -1, 0.8, 1.3, -1, 0.2, 1.4, -1, 0.3, 1.3, -1, 0.8, 1.3, -1, 0.2, 0.2, -1, -1.5, 0, -1, 0.9, 0.2, -1, 0.8, 0.3, -1, 0.2, 0.2, -1, 0.9, 0.2, -1, 0.8, 1.3, -1, 0.8, 0.3, -1, 0.9, 0.2, -1, -0.7, 1.7, -1, 0.2, 1.4, -1, 0.9, 1.4, -1, 0.8, 1.3, -1, 0.9, 0.2, -1, 0.9, 1.4, -1, 0.2, 1.4, -1, 0.8, 1.3, -1, 0.9, 1.4, -1, 0.9, 1.4, -1, 0.9, 0.2, -1, 1.1, 1.1, -1, -0.7, 1.7, -1, 0.9, 1.4, -1, 1.1, 1.7, -1, 0.9, 1.4, -1, 1.1, 1.1, -1, 1.1, 1.7, -1, 1.1, 1.1, -1, 0.9, 0.2, -1, 1.4, 1.1, -1, 1.1, 1.7, -1, 1.1, 1.1, -1, 1.4, 1.1, -1, 1.1, 1.7, -1, 1.4, 1.1, -1, 1.4, 1.7, -1, 0.9, 0.2, -1, -1.5, 0, -1, 1.8, 0, -1, 1.4, 1.1, -1, 0.9, 0.2, -1, 1.8, 0, -1, 1.4, 1.7, -1, 1.4, 1.1, -1, 1.8, 0, -1, 1.4, 1.7, -1, 1.8, 0, -1, 1.8, 1.7, -1, 1.8, 0, 1.1, -1.5, 0, -1, -1.5, 0, 1.1, 1.8, 0, 1.1, 1.8, 0, -1, -1.5, 0, -1, 1.1, 1.7, 1.1, -0.7, 1.7, 1.1, -0.6, 1.7, 1, 1.1, 1.7, 1.1, -0.6, 1.7, 1, -0.2, 1.7, 1, -0.6, 1.7, 1, -0.7, 1.7, 1.1, -0.6, 1.7, 0.9, -0.2, 1.7, 1, -0.6, 1.7, 1, -0.6, 1.7, 0.9, 1.1, 1.7, 1.1, -0.2, 1.7, 1, -0.2, 1.7, 0.9, -0.2, 1.7, 1, -0.6, 1.7, 0.9, -0.2, 1.7, 0.9, -0.6, 1.7, 0.9, -0.7, 1.7, 1.1, -0.6, 1.7, 0.8, -0.2, 1.7, 0.9, -0.6, 1.7, 0.9, -0.6, 1.7, 0.8, 1.1, 1.7, 1.1, -0.2, 1.7, 0.9, -0.1, 1.7, 0.8, -0.2, 1.7, 0.9, -0.6, 1.7, 0.8, -0.1, 1.7, 0.8, -0.6, 1.7, 0.8, -0.7, 1.7, 1.1, -0.6, 1.7, 0.7, -0.1, 1.7, 0.8, -0.6, 1.7, 0.8, -0.6, 1.7, 0.7, 1.1, 1.7, 1.1, -0.1, 1.7, 0.8, -0.1, 1.7, 0.7, -0.1, 1.7, 0.8, -0.6, 1.7, 0.7, -0.1, 1.7, 0.7, -1, 1.7, 1.1, -1.5, 1.7, 1.1, -1.5, 1.7, 0.2, -0.7, 1.7, 1.1, -1, 1.7, 1.1, -1, 1.7, 0.2, -1, 1.7, 1.1, -1.5, 1.7, 0.2, -1, 1.7, 0.2, -0.6, 1.7, 0.7, -0.7, 1.7, 1.1, -0.7, 1.7, 0.2, -0.7, 1.7, 1.1, -1, 1.7, 0.2, -0.7, 1.7, 0.2, -0.1, 1.7, 0.7, -0.6, 1.7, 0.7, -0.7, 1.7, 0.2, 1.1, 1.7, 1.1, -0.1, 1.7, 0.7, 1.1, 1.7, 0.2, -0.1, 1.7, 0.7, -0.7, 1.7, 0.2, 1.1, 1.7, 0.2, 1.4, 1.7, 1.1, 1.1, 1.7, 1.1, 1.1, 1.7, 0.2, 1.8, 1.7, 1.1, 1.4, 1.7, 1.1, 1.4, 1.7, 0.2, 1.4, 1.7, 1.1, 1.1, 1.7, 0.2, 1.4, 1.7, 0.2, 1.8, 1.7, 1.1, 1.4, 1.7, 0.2, 1.8, 1.7, 0.2, -0.7, 1.7, 0.2, -1, 1.7, 0.2, -0.6, 1.7, 0.1, 1.1, 1.7, 0.2, -0.7, 1.7, 0.2, -0.6, 1.7, 0.1, 1.8, 1.7, 0.2, 1.4, 1.7, 0.2, -0.6, 1.7, 0.1, 1.4, 1.7, 0.2, 1.1, 1.7, 0.2, -0.6, 1.7, 0.1, -1, 1.7, 0.2, -1.5, 1.7, 0.2, -0.6, 1.7, 0.1, 1.8, 1.7, 0.2, -0.6, 1.7, 0.1, -0.5, 1.7, 0.1, 1.8, 1.7, 0.2, -0.5, 1.7, 0.1, 0.9, 1.7, 0.1, 1.8, 1.7, 0.2, 0.9, 1.7, 0.1, 1, 1.7, 0.1, 0.9, 1.7, 0.1, -0.5, 1.7, 0.1, -0.4, 1.7, 0, 0.9, 1.7, 0.1, -0.4, 1.7, 0, -0.3, 1.7, 0, 0.9, 1.7, 0.1, -0.3, 1.7, 0, -0.2, 1.7, 0, 0.9, 1.7, 0.1, -0.2, 1.7, 0, -0.1, 1.7, 0, 0.9, 1.7, 0.1, -0.1, 1.7, 0, 0, 1.7, 0, 0.9, 1.7, 0.1, 0, 1.7, 0, 0.1, 1.7, 0, 0.9, 1.7, 0.1, 0.1, 1.7, 0, 0.2, 1.7, 0, 0.9, 1.7, 0.1, 0.2, 1.7, 0, 0.3, 1.7, 0, 0.9, 1.7, 0.1, 0.3, 1.7, 0, 0.4, 1.7, 0, 0.9, 1.7, 0.1, 0.4, 1.7, 0, 0.5, 1.7, 0, 0.9, 1.7, 0.1, 0.5, 1.7, 0, 0.6, 1.7, 0, 0.9, 1.7, 0.1, 0.6, 1.7, 0, 0.7, 1.7, 0, 0.9, 1.7, 0.1, 0.7, 1.7, 0, 0.8, 1.7, 0, 1, 1.7, 0.1, 0.9, 1.7, 0.1, 0.9, 1.7, 0, 0.9, 1.7, 0.1, 0.8, 1.7, 0, 0.9, 1.7, 0, -0.6, 1.7, 0.1, -1.5, 1.7, 0.2, -1.5, 1.7, -0.1, -0.6, 1.7, 0.1, -1.5, 1.7, -0.1, -1, 1.7, -0.1, -0.6, 1.7, 0.1, -1, 1.7, -0.1, -0.7, 1.7, -0.1, -0.5, 1.7, 0.1, -0.6, 1.7, 0.1, -0.6, 1.7, -0.1, -0.6, 1.7, 0.1, -0.7, 1.7, -0.1, -0.6, 1.7, -0.1, 0.1, 1.7, 0, 0, 1.7, 0, 0.1, 1.7, -0.1, 0.2, 1.7, 0, 0.1, 1.7, 0, 0.1, 1.7, -0.1, 0.3, 1.7, 0, 0.2, 1.7, 0, 0.2, 1.7, -0.1, 0.2, 1.7, 0, 0.1, 1.7, -0.1, 0.2, 1.7, -0.1, 1, 1.7, 0.1, 0.9, 1.7, 0, 1, 1.7, -0.1, 1.8, 1.7, 0.2, 1, 1.7, 0.1, 1, 1.7, -0.1, 1.8, 1.7, 0.2, 1, 1.7, -0.1, 1.1, 1.7, -0.1, 1.8, 1.7, 0.2, 1.1, 1.7, -0.1, 1.4, 1.7, -0.1, 1.8, 1.7, 0.2, 1.4, 1.7, -0.1, 1.8, 1.7, -0.1, 0.2, 1.7, -0.1, 0.1, 1.7, -0.1, 0.1, 1.7, -0.2, 0.1, 1.7, -0.1, 0, 1.7, 0, 0.1, 1.7, -0.2, 0.3, 1.7, 0, 0.2, 1.7, -0.1, 0.2, 1.7, -0.2, 0.2, 1.7, -0.1, 0.1, 1.7, -0.2, 0.2, 1.7, -0.2, 0.1, 1.7, -0.2, 0, 1.7, 0, 0, 1.7, -0.3, 0, 1.7, 0, -0.1, 1.7, 0, 0, 1.7, -0.3, 0.2, 1.7, -0.2, 0.1, 1.7, -0.2, 0.1, 1.7, -0.3, 0.1, 1.7, -0.2, 0, 1.7, -0.3, 0.1, 1.7, -0.3, 0.3, 1.7, 0, 0.2, 1.7, -0.2, 0.2, 1.7, -0.3, 0.2, 1.7, -0.2, 0.1, 1.7, -0.3, 0.2, 1.7, -0.3, 0.4, 1.7, 0, 0.3, 1.7, 0, 0.3, 1.7, -0.3, 0.3, 1.7, 0, 0.2, 1.7, -0.3, 0.3, 1.7, -0.3, 0.6, 1.7, 0, 0.5, 1.7, 0, 0.6, 1.7, -0.3, 0.7, 1.7, 0, 0.6, 1.7, 0, 0.6, 1.7, -0.3, 0.8, 1.7, 0, 0.7, 1.7, 0, 0.7, 1.7, -0.3, 0.7, 1.7, 0, 0.6, 1.7, -0.3, 0.7, 1.7, -0.3, 0.9, 1.7, 0, 0.8, 1.7, 0, 0.8, 1.7, -0.3, 0.8, 1.7, 0, 0.7, 1.7, -0.3, 0.8, 1.7, -0.3, 1, 1.7, -0.1, 0.9, 1.7, 0, 0.9, 1.7, -0.3, 0.9, 1.7, 0, 0.8, 1.7, -0.3, 0.9, 1.7, -0.3, -0.2, 1.7, 0, -0.3, 1.7, 0, -0.2, 1.7, -0.4, -0.1, 1.7, 0, -0.2, 1.7, 0, -0.2, 1.7, -0.4, 0.1, 1.7, -0.3, 0, 1.7, -0.3, -0.1, 1.7, -0.4, -0.1, 1.7, 0, -0.2, 1.7, -0.4, -0.1, 1.7, -0.4, 0, 1.7, -0.3, -0.1, 1.7, 0, -0.1, 1.7, -0.4, 0.2, 1.7, -0.3, 0.1, 1.7, -0.3, -0.1, 1.7, -0.4, 0.3, 1.7, -0.3, 0.2, 1.7, -0.3, -0.1, 1.7, -0.4, 0.3, 1.7, -0.3, -0.1, 1.7, -0.4, 0, 1.7, -0.4, 0.3, 1.7, -0.3, 0, 1.7, -0.4, 0.2, 1.7, -0.4, 0.6, 1.7, -0.3, 0.5, 1.7, 0, 0.6, 1.7, -0.4, 0.9, 1.7, -0.3, 0.8, 1.7, -0.3, 0.6, 1.7, -0.4, 0.8, 1.7, -0.3, 0.7, 1.7, -0.3, 0.6, 1.7, -0.4, 0.7, 1.7, -0.3, 0.6, 1.7, -0.3, 0.6, 1.7, -0.4, 0.9, 1.7, -0.3, 0.6, 1.7, -0.4, 0.8, 1.7, -0.4, -0.4, 1.7, 0, -0.5, 1.7, 0.1, -0.4, 1.7, -0.6, -0.3, 1.7, 0, -0.4, 1.7, 0, -0.4, 1.7, -0.6, -0.2, 1.7, -0.4, -0.3, 1.7, 0, -0.3, 1.7, -0.6, -0.3, 1.7, 0, -0.4, 1.7, -0.6, -0.3, 1.7, -0.6, 0, 1.7, -0.4, -0.1, 1.7, -0.4, -0.3, 1.7, -0.6, -0.1, 1.7, -0.4, -0.2, 1.7, -0.4, -0.3, 1.7, -0.6, 0.2, 1.7, -0.4, 0, 1.7, -0.4, 0, 1.7, -0.6, 0, 1.7, -0.4, -0.3, 1.7, -0.6, 0, 1.7, -0.6, 0.3, 1.7, -0.3, 0.2, 1.7, -0.4, 0.2, 1.7, -0.6, 0.2, 1.7, -0.4, 0, 1.7, -0.6, 0.2, 1.7, -0.6, 0.5, 1.7, 0, 0.4, 1.7, 0, 0.4, 1.7, -0.6, 0.3, 1.7, -0.3, 0.2, 1.7, -0.6, 0.4, 1.7, -0.6, 0.4, 1.7, 0, 0.3, 1.7, -0.3, 0.4, 1.7, -0.6, 0.6, 1.7, -0.4, 0.5, 1.7, 0, 0.5, 1.7, -0.6, 0.5, 1.7, 0, 0.4, 1.7, -0.6, 0.5, 1.7, -0.6, 0.8, 1.7, -0.4, 0.6, 1.7, -0.4, 0.6, 1.7, -0.6, 0.6, 1.7, -0.4, 0.5, 1.7, -0.6, 0.6, 1.7, -0.6, 0.9, 1.7, -0.3, 0.8, 1.7, -0.4, 0.8, 1.7, -0.6, 0.8, 1.7, -0.4, 0.6, 1.7, -0.6, 0.8, 1.7, -0.6, -0.5, 1.7, 0.1, -0.6, 1.7, -0.1, -0.6, 1.7, -0.7, -0.6, 1.7, -0.1, -0.7, 1.7, -0.1, -0.6, 1.7, -0.7, -0.4, 1.7, -0.6, -0.5, 1.7, 0.1, -0.5, 1.7, -0.7, -0.5, 1.7, 0.1, -0.6, 1.7, -0.7, -0.5, 1.7, -0.7, 0, 1.7, -0.6, -0.3, 1.7, -0.6, -0.5, 1.7, -0.7, 0.6, 1.7, -0.6, 0.5, 1.7, -0.6, -0.5, 1.7, -0.7, 0.4, 1.7, -0.6, 0.2, 1.7, -0.6, -0.5, 1.7, -0.7, 0.5, 1.7, -0.6, 0.4, 1.7, -0.6, -0.5, 1.7, -0.7, 0.2, 1.7, -0.6, 0, 1.7, -0.6, -0.5, 1.7, -0.7, -0.3, 1.7, -0.6, -0.4, 1.7, -0.6, -0.5, 1.7, -0.7, 0.8, 1.7, -0.6, 0.6, 1.7, -0.6, -0.5, 1.7, -0.7, 1, 1.7, -0.1, 0.9, 1.7, -0.3, 0.9, 1.7, -0.7, 0.8, 1.7, -0.6, -0.5, 1.7, -0.7, 0.9, 1.7, -0.7, 0.9, 1.7, -0.3, 0.8, 1.7, -0.6, 0.9, 1.7, -0.7, 1.1, 1.7, -0.1, 1, 1.7, -0.1, 1, 1.7, -0.7, 1, 1.7, -0.1, 0.9, 1.7, -0.7, 1, 1.7, -0.7, -1, 1.7, -0.1, -1.5, 1.7, -0.1, -1.5, 1.7, -1, -0.7, 1.7, -0.1, -1, 1.7, -0.1, -1, 1.7, -1, -1, 1.7, -0.1, -1.5, 1.7, -1, -1, 1.7, -1, -0.6, 1.7, -0.7, -0.7, 1.7, -0.1, -0.7, 1.7, -1, -0.7, 1.7, -0.1, -1, 1.7, -1, -0.7, 1.7, -1, 0.9, 1.7, -0.7, -0.5, 1.7, -0.7, -0.7, 1.7, -1, 1, 1.7, -0.7, 0.9, 1.7, -0.7, -0.7, 1.7, -1, -0.5, 1.7, -0.7, -0.6, 1.7, -0.7, -0.7, 1.7, -1, 1.1, 1.7, -0.1, 1, 1.7, -0.7, 1.1, 1.7, -1, 1, 1.7, -0.7, -0.7, 1.7, -1, 1.1, 1.7, -1, 1.4, 1.7, -0.1, 1.1, 1.7, -0.1, 1.1, 1.7, -1, 1.8, 1.7, -0.1, 1.4, 1.7, -0.1, 1.4, 1.7, -1, 1.4, 1.7, -0.1, 1.1, 1.7, -1, 1.4, 1.7, -1, 1.8, 1.7, -0.1, 1.4, 1.7, -1, 1.8, 1.7, -1 )

[sub_resource type="ProceduralSky" id=3]
sky_top_color = Color( 1, 0.870588, 0.556863, 1 )
sky_horizon_color = Color( 0.866667, 0.435294, 0, 1 )
ground_bottom_color = Color( 0.764706, 0.568627, 0.396078, 1 )
ground_horizon_color = Color( 0.733333, 0.482353, 0.270588, 1 )
sun_color = Color( 1, 0.890196, 0.384314, 1 )
sun_latitude = 16.1
sun_longitude = 116.43
sun_energy = 1.2

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
fog_enabled = true
fog_color = Color( 1, 0.901961, 0.701961, 1 )
fog_sun_color = Color( 1, 0.901961, 0.701961, 1 )
fog_depth_begin = 0.0
fog_depth_end = 143.9
fog_depth_curve = 0.466517
dof_blur_far_distance = 24.55
dof_blur_far_transition = 85.83
dof_blur_far_amount = 0.17

[sub_resource type="NavigationMesh" id=5]
vertices = PoolVector3Array( -90.6441, 8.98986, 0.0456004, -90.6441, 8.98986, 6.6456, -79.5441, 8.98986, 6.6456, -79.5441, 8.98986, -6.5544, -90.6441, 8.98986, -6.5544, -90.6441, 8.98986, 0.0456004, 79.156, 8.98986, 6.6456, 90.556, 8.98986, 6.6456, 90.556, 8.98986, 0.0456004, 90.556, 8.98986, 0.0456004, 90.556, 8.98986, -6.5544, 79.156, 8.98986, -6.5544, 79.156, 8.98986, 6.6456, 90.556, 8.98986, 0.0456004, 79.156, 8.98986, -6.5544, 67.756, 8.98986, -6.5544, 67.756, 8.98986, 6.6456, -79.5441, 8.98986, -6.5544, -90.6441, 8.98986, 0.0456004, -79.5441, 8.98986, 6.6456, -68.1441, 8.98986, 6.6456, -68.1441, 8.98986, -6.5544, -11.444, 8.98986, 6.6456, -0.0440445, 8.98986, 6.6456, -0.0440445, 8.98986, -6.5544, -11.444, 8.98986, -6.5544, -0.0440445, 8.98986, 6.6456, 11.056, 8.98986, 6.6456, 11.056, 8.98986, -6.5544, -0.0440445, 8.98986, -6.5544, 56.356, 8.98986, 6.6456, 67.756, 8.98986, 6.6456, 67.756, 8.98986, -6.5544, 56.356, 8.98986, -6.5544, -56.744, 8.98986, -6.5544, -68.1441, 8.98986, -6.5544, -68.1441, 8.98986, 6.6456, -56.744, 8.98986, 6.6456, 45.256, 8.98986, 6.6456, 56.356, 8.98986, 6.6456, 56.356, 8.98986, -6.5544, 45.256, 8.98986, -6.5544, -22.844, 8.98986, 6.6456, -11.444, 8.98986, 6.6456, -11.444, 8.98986, -6.5544, -22.844, 8.98986, -6.5544, 33.856, 8.98986, 6.6456, 45.256, 8.98986, 6.6456, 45.256, 8.98986, -6.5544, 33.856, 8.98986, -6.5544, -45.344, 8.98986, -6.5544, -56.744, 8.98986, -6.5544, -56.744, 8.98986, 6.6456, -45.344, 8.98986, 6.6456, 22.456, 8.98986, 6.6456, 33.856, 8.98986, 6.6456, 33.856, 8.98986, -6.5544, 22.456, 8.98986, -6.5544, -34.244, 8.98986, -6.5544, -45.344, 8.98986, -6.5544, -45.344, 8.98986, 6.6456, -34.244, 8.98986, 6.6456, 11.056, 8.98986, 6.6456, 22.456, 8.98986, 6.6456, 22.456, 8.98986, -6.5544, 11.056, 8.98986, -6.5544, -22.844, 8.98986, -6.5544, -34.244, 8.98986, -6.5544, -34.244, 8.98986, 6.6456, -22.844, 8.98986, 6.6456 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 8, 7, 6 ), PoolIntArray( 9, 11, 10 ), PoolIntArray( 13, 12, 14 ), PoolIntArray( 14, 12, 16 ), PoolIntArray( 14, 16, 15 ), PoolIntArray( 18, 17, 19 ), PoolIntArray( 19, 17, 21 ), PoolIntArray( 19, 21, 20 ), PoolIntArray( 25, 24, 22 ), PoolIntArray( 22, 24, 23 ), PoolIntArray( 29, 28, 26 ), PoolIntArray( 26, 28, 27 ), PoolIntArray( 33, 32, 30 ), PoolIntArray( 30, 32, 31 ), PoolIntArray( 37, 36, 34 ), PoolIntArray( 34, 36, 35 ), PoolIntArray( 41, 40, 38 ), PoolIntArray( 38, 40, 39 ), PoolIntArray( 45, 44, 42 ), PoolIntArray( 42, 44, 43 ), PoolIntArray( 49, 48, 46 ), PoolIntArray( 46, 48, 47 ), PoolIntArray( 53, 52, 50 ), PoolIntArray( 50, 52, 51 ), PoolIntArray( 57, 56, 54 ), PoolIntArray( 54, 56, 55 ), PoolIntArray( 61, 60, 58 ), PoolIntArray( 58, 60, 59 ), PoolIntArray( 65, 64, 62 ), PoolIntArray( 62, 64, 63 ), PoolIntArray( 69, 68, 66 ), PoolIntArray( 66, 68, 67 ) ]

[sub_resource type="CubeMesh" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.772549, 0.054902, 0, 1 )
corner_detail = 10

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="RoadSegment1" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 117.047, 0, 0 )

[node name="RoadSegment2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 97.0469, 0, 0 )

[node name="RoadSegment3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 77.0469, 0, 0 )

[node name="RoadSegment4" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 57.0469, 0, 0 )

[node name="RoadSegment5" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 37.0469, 0, 0 )

[node name="RoadSegment6" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.0469, 0, 0 )

[node name="RoadSegment7" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.95314, 0, 0 )

[node name="RoadSegment8" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.9531, 0, 0 )

[node name="RoadSegment9" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.9531, 0, 0 )

[node name="RoadSegment10" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -62.953, 0, 0 )

[node name="RoadSegment11" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -82.953, 0, 0 )

[node name="RoadSegment12" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -103.033, 0, -0.0974773 )

[node name="MailTruck" type="MeshInstance" parent="."]
transform = Transform( -0.5, 0, -1.62921e-07, 0, 0.5, 0, 1.62921e-07, 0, -0.5, -101.669, -0.00432169, 0.194412 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 9 )

[node name="Cam" type="Spatial" parent="MailTruck"]
transform = Transform( 9.77523e-07, 0, 2, 0, 2, 0, -2, 0, 9.77523e-07, -9.57196, 4.322, 0.388821 )

[node name="Camera" type="Camera" parent="MailTruck/Cam"]
fov = 60.0
far = 500.0

[node name="Reach" type="RayCast" parent="MailTruck/Cam/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 8

[node name="Muzzle" type="Position3D" parent="MailTruck/Cam"]
transform = Transform( 1, 0, 4.26326e-14, 0, 1, 0, -4.26326e-14, 0, 1, -3.82479e-08, 0, -0.846634 )

[node name="StaticBody" type="StaticBody" parent="MailTruck"]
transform = Transform( 4.30561, 0, -2.43367e-06, 0, 3.66405, 0, 2.43368e-06, 0, 3.16329, -3.81343, 3.43645, 0.388823 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="MailTruck/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 2.84217e-14, 0, 1, -1.1328, 0.112541, 3.69098e-07 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="MailTruck"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2" type="CollisionShape" parent="MailTruck/Area"]
transform = Transform( 4.30561, 0, -2.43367e-06, 0, 3.66405, 0, 2.43368e-06, 0, 3.16329, -8.69083, 3.84881, 0.388821 )
shape = SubResource( 1 )

[node name="BigPackage" type="MeshInstance" parent="MailTruck"]
transform = Transform( -0.557006, 0, -0.830508, 0, 0.809954, 0, 0.830508, 0, -0.557006, -5.7908, 1.47589, 0.988298 )
mesh = ExtResource( 10 )
material/0 = ExtResource( 11 )

[node name="StaticBodyBigPack" type="StaticBody" parent="MailTruck/BigPackage"]
collision_layer = 9
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="MailTruck/BigPackage/StaticBodyBigPack"]
shape = SubResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.14021, -8.94203, 0 )
navmesh = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/NavigationMeshInstance"]
transform = Transform( 91.244, 0, 0, 0, 4.41198, 0, 0, 0, 7.1544, 0, 0.126825, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="ReconBot2" parent="Navigation" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99466, 0, -3.82935 )

[node name="Car" parent="Navigation" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -47.6039, 0, 0 )

[node name="Target" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -93.9676, 0.145, 0 )

[node name="Spawn" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70.5269, 0.659729, 0.838189 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutOfAmmo" type="Label" parent="MarginContainer"]
visible = false
margin_top = 336.0
margin_right = 1280.0
margin_bottom = 384.0
text = "Out of Ammo!
reload bt pressing 'e'
on the big box in the back of the truck"
align = 1

[node name="HealthBar" type="ProgressBar" parent="MarginContainer"]
margin_top = 706.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 8
custom_styles/fg = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/HealthBar"]
margin_left = 1132.0
margin_top = -19.0
margin_right = 1276.0
margin_bottom = -2.0
text = "Ammo: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
